Improve User Interface (Fix Bugs) (#176)
* Fix thai font too small

* Fix Container style

* Fix learn page container

* Render PDF in fullsize

* Add more whitespace

* Add .idea to gitignore

* Remove unused variable 'detail'

--- a/src/assets/css/init.css
+++ b/src/assets/css/init.css
@@ -20,8 +20,13 @@
 }
 
 @font-face {
-  font-family: Sarabun;
-  src: url('../fonts/THSarabunNew.ttf') format('truetype');
+  font-family: 'Sarabun';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Sarabun Regular'), local('Sarabun-Regular'),
+    url(../fonts/THSarabun.woff2) format('woff2');
+  unicode-range: U+0E01-0E5B, U+200C-200D, U+25CC;
 }
 
 @font-face {
